# getanswe.rs

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  README.md  cliff.toml  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: changelog.yml  ci.yml  rust.yml
answer/: Cargo.toml  README.md
answer/src/: main.rs
examples/: README.md  act-as-a-linux-terminal.yml
murmur/: Cargo.toml  README.md
murmur/src/: main.rs
python/answer/: __init__.py
reply/: Cargo.toml  README.md
reply/src/: main.rs
src/: lib.rs  main.rs
