[package]
name = "answer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
human-panic = "1.1.4"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rustyline = "11.0.0"
