[package]
name = "answer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-openai = "0.10.3"
clap = { version = "4.2.7", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
cpal = "0.15.2"
ctrlc = "3.2.5"
either = "1.8.1"
hound = "3.5.0"
human-panic = "1.1.4"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rustyline = "11.0.0"
tempfile = "3.5.0"
tokio = { version = "1.28.1", features = ["rt-multi-thread"] }
