[package]
name = "answer"
version = "0.0.1-alpha.1"
edition = "2021"
authors = ["Felipe S. S. Schneider <schneider.felipe.5@gmail.com>"]
description = "answer any question right from your terminal, using the same large language model that powers ChatGPT"
homepage = "https://github.com/schneiderfelipe/answer"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", default-features = false, features = ["std"] }
async-openai = { version = "0.9.4", default-features = false }
clap = { version = "4.1.8", default-features = false }
clap-verbosity-flag = { version = "2.0.0", default-features = false }
futures = { version = "0.3.27", default-features = false }
human-panic = { version = "1.1.1", default-features = false }
log = { version = "0.4.17", default-features = false }
pretty_env_logger = { version = "0.4.0", default-features = false }
serde = { version = "1.0.156", default-features = false }
serde_yaml = { version = "0.9.19", default-features = false }
thiserror = { version = "1.0.39", default-features = false }
tokio = { version = "1.26.0", default-features = false, features = [
  "io-std",
  "rt-multi-thread",
] }
