[package]
name = "murmur"
version = "0.0.0"
edition = "2021"
authors = ["Felipe S. S. Schneider <schneider.felipe.5@gmail.com>"]
description = "murmur into your terminal and convert your speech to text using OpenAI's Whisper API"
homepage = "https://github.com/schneiderfelipe/getanswe.rs/tree/main/murmur"
repository = "https://github.com/schneiderfelipe/getanswe.rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69" }
clap = { version = "4.1.8", features = ["derive"] }
clap-verbosity-flag = { version = "2.0.0" }
cpal = { version = "0.15.1" }
either = "1.8.1"
hound = { version = "3.5.0" }
