[package]
name = "murmur"
version = "0.0.0"
edition = "2021"
authors = ["Felipe S. S. Schneider <schneider.felipe.5@gmail.com>"]
description = "murmur into your terminal and convert your speech to text using OpenAI's Whisper API"
homepage = "https://github.com/schneiderfelipe/getanswe.rs/tree/main/murmur"
repository = "https://github.com/schneiderfelipe/getanswe.rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69" }
async-openai = { version = "0.9.4" }
clap = { version = "4.1.8", features = ["derive"] }
clap-verbosity-flag = { version = "2.0.0" }
cpal = { version = "0.15.1" }
either = { version = "1.8.1" }
hound = { version = "3.5.0" }
human-panic = { version = "1.1.1" }
log = { version = "0.4.17" }
pretty_env_logger = { version = "0.4.0" }
tempfile = { version = "3.4.0" }
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
