[package]
name = "murmur"
version = "0.0.0"
edition = "2021"
authors = ["Felipe S. S. Schneider <schneider.felipe.5@gmail.com>"]
description = "murmur into your terminal and convert your speech to text using OpenAI's Whisper API"
homepage = "https://github.com/schneiderfelipe/getanswe.rs/tree/main/murmur"
repository = "https://github.com/schneiderfelipe/getanswe.rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71" }
async-openai = { version = "0.26.0" }
clap = { version = "4.2.7", features = ["derive"] }
clap-verbosity-flag = { version = "2.0.1" }
cpal = { version = "0.15.2" }
ctrlc = "3.2.5"
either = { version = "1.8.1" }
hound = { version = "3.5.0" }
human-panic = { version = "2.0.0" }
log = { version = "0.4.17" }
pretty_env_logger = { version = "0.5.0" }
tempfile = { version = "3.5.0" }
tokio = { version = "1.28.1", features = ["rt-multi-thread"] }
