[package]
name = "reply"
version = "0.0.0"
edition = "2021"
authors = ["Felipe S. S. Schneider <schneider.felipe.5@gmail.com>"]
description = "Convert any command-line application into a REPL"
homepage = "https://github.com/schneiderfelipe/answer/tree/main/reply"
repository = "https://github.com/schneiderfelipe/answer"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69" }
clap = { version = "4.1.8" }
clap-verbosity-flag = { version = "2.0.0" }
human-panic = { version = "1.1.1" }
log = { version = "0.4.17" }
pretty_env_logger = { version = "0.4.0" }
