[package]
name = "reply"
version = "0.0.1-beta.2"
edition = "2021"
authors = ["Felipe S. S. Schneider <schneider.felipe.5@gmail.com>"]
description = "reply makes any command-line application a (stateless) REPL"
homepage = "https://github.com/schneiderfelipe/getanswe.rs/tree/main/reply"
repository = "https://github.com/schneiderfelipe/getanswe.rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71" }
clap = { version = "4.2.7" }
clap-verbosity-flag = { version = "2.0.1" }
duct = { version = "0.13.6" }
duct_sh = { version = "0.13.6" }
human-panic = { version = "1.1.4" }
log = { version = "0.4.17" }
pretty_env_logger = { version = "0.5.0" }
rustyline = { version = "12.0.0" }
thiserror = { version = "1.0.40" }
